--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./resurse/css/general.css" />
+    <link rel="stylesheet" type="text/css" href="./resurse/css/nav.css" />
   </head>
 
   <body>
