--- a/index.html
+++ b/index.html
@@ -46,17 +46,30 @@
     />
     <link rel="stylesheet" type="text/css" href="./resurse/css/general.css" />
     <link rel="stylesheet" type="text/css" href="./resurse/css/nav.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
   </head>
 
   <body>
     <header id="top">
       <div class="header">
-        <h1 class="logo"><span>Auto</span>XV</h1>
+        <h1 class="logo"><span>Auto </span><i class="fa-solid fa-car"></i> XV</h1>
         <!--ex6-->
+        <input type="checkbox" id="menu-toggle" hidden />
+
+        <label class="hamburger" for="menu-toggle">
+          <i class="fa-solid fa-bars"></i>
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
         <nav>
           <ul class="menu">
             <li>
-              <a href="#home">Home</a>
+              <a href="#home" class="home-link">
+              <span class="full-text">Home</span>
+              <i class="fa-solid fa-house icon-replacement"></i>
+            </a>
+
               <ul class="submenu">
                 <li><a href="#despre">Despre noi</a></li>
                 <li><a href="#ultimele">Ultimele anunturi adaugate</a></li>
@@ -271,15 +284,11 @@
           allowfullscreen
         >
         </iframe>
-
-
-
-
         </div>
 
         <div class="back-to-top">
-          <a href="index.html">
-            <div>⇧</div>
+          <a href="/home">
+           <i class="fa-solid fa-arrow-up"></i>
           </a>
         </div>
       </div>
